# tmx-objects

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_run-jN.bat  build_run.bat  clean_files.bat  debug-sep_build_code.bat  debug-sep_build_code_run.bat  debug-sep_rebuild_all.bat  debug-sep_rebuild_all_run.bat  debug-sep_rebuild_res.bat  find_smd_dev.bat  rebuild.bat  rebuild_and_run-jN.bat  rebuild_and_run.bat  release-sep_build_code.bat  release-sep_build_code_run.bat  release-sep_rebuild_all.bat  release-sep_rebuild_all_run.bat  release-sep_rebuild_res.bat  rename_project.ps1  run.bat  timer.bat  tmx-objects.cbp
res/: objects.h  objects.res  sprites.h  sprites.res
res/tmx/: map.tmx
res/tmx_map/: 1.tiled-project  1.tiled-session  map.tmx  objects_map.tmx  propertytypes.json  stg_1.tiled-project  stg_1.tiled-session
src/: main.c
